--- a/css/home.css
+++ b/css/home.css
@@ -94,7 +94,7 @@
   display: block;
 }
 
-/* View All Button (Aligned to the right) */
+/* View All Button  */
 .view-all-button-wrapper {
   text-align: center;
   margin-top: 10px;
