--- a/css/product.css
+++ b/css/product.css
@@ -54,7 +54,9 @@
     max-width: 100%;
     height: auto;
     display: block;
+    margin-bottom: 10px;
 }
+
 
 @media (max-width: 480px) {
   .product-image {
