--- a/css/product.css
+++ b/css/product.css
@@ -31,7 +31,7 @@
 
 .product-image.placeholder::after {
     content: 'Product Image';
-    color: #4caf50;
+    color: white;
     font-weight: 500;
 }
 
