--- a/css/product.css
+++ b/css/product.css
@@ -23,7 +23,7 @@
 
 .product-image {
     height: 200px;
-    background-color: #f5f5f5;
+    background-color: #ffffff; /* changed from gray to white */
     display: flex;
     align-items: center;
     justify-content: center;
