--- a/css/product.css
+++ b/css/product.css
@@ -63,9 +63,9 @@
 
 .product-image img {
     width: 100%;
-    height: auto;
+    max-height: 160px;
     object-fit: contain;
-    display: block;
+    
 }
 
 .product-availability-note{
