--- a/css/product.css
+++ b/css/product.css
@@ -63,9 +63,9 @@
 
 .product-image img {
     width: 100%;
-    max-height: 160px;
+    height: auto;
     object-fit: contain;
-    
+    display: block;
 }
 
 .product-availability-note{
