--- a/css/product.css
+++ b/css/product.css
@@ -31,7 +31,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 10;                /* Remove extra spacing */
+    padding: 10px;                /* Remove extra spacing */
     height: 200px;              /* Let the image define the height */
 }
 
